--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <!-- parte di intestazione -->
     <header>
+        <h1>Il mio Viaggio a Londra</h1>
         <section>
-
+            <img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine 1">
+            <img src="img/pexels-bill-emrich-230794-1.jpg" alt="immagine 2">
+            <img src="img/pexels-bill-emrich-230794-2.jpg" alt="immagine 3">
         </section>
+        <hr>
     </header>
 
     <!-- Corpo principale -->
