--- a/index.html
+++ b/index.html
@@ -60,9 +60,15 @@
         <hr>
         <!-- cose da fare -->
         <section>
-        
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London <strong>&#10007;</strong></li>
+                <li>Visitare greenwich <strong>&#10003;</strong></li>
+                <li>Ascoltare un artista di strada a Covent Garden <strong>&#10003;</strong></li>
+                <li>Mangiare il tipico Fish and Chips inglese <strong>&#10007;</strong></li>
+            </ul>
         </section>
-
+        <hr>
         <!-- info -->
         <section>
 
